...

  @override
  _MyDonationsPageState createState() => _MyDonationsPageState();
}

class _MyDonationsPageState extends ConsumerState<MyDonationsPage> {
  String selectedStatus = 'All';

  @override
  Widget build(BuildContext context) {
    final authState = ref.watch(authProvider);

    if (authState is AsyncError ||
...
        authState.user == null) {
      WidgetsBinding.instance.addPostFrameCallback((_) {
        Navigator.pushReplacementNamed(context, '/login');
      });
      return Scaffold(
        appBar: AppBar(
          title: const Text("Manage Donations"),
        ),
        body: const Center(
          child: Text("You need to be logged in to view this page."),
        ),
      );
    }
...
