...
    double distanceInMiles = distanceInMeters / 1609.34;
    String timeAgo = calculateTimeAgo(widget.donationTime);

    return Scaffold(
      appBar: AppBar(
        title: Text(
          'Donation Details',
          style: TextStyle(
            fontSize: 20,
            fontWeight: FontWeight.bold,
            letterSpacing: 1.2,
            color: Theme.of(context).appBarTheme.titleTextStyle?.color ??
                Colors.white,
...
